# eventbus-contract

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION-0.2.md  README.md
crates/eventbus/: Cargo.toml
crates/eventbus-contract/: Cargo.toml  README.md
crates/eventbus-contract/examples/: 01_basic_pubsub.rs  03_competing_consumers.rs  04_redis_backend.rs
crates/eventbus-contract/src/: lib.rs
crates/eventbus-core/: Cargo.toml  README.md
crates/eventbus-core/benches/: publish.rs
crates/eventbus-core/examples/: 01_basic_pubsub.rs  02_manual_ack_and_retry.rs  03_competing_consumers.rs  04_redis_backend.rs
crates/eventbus-core/src/: error.rs  lib.rs
crates/eventbus-core/src/codec/: mod.rs
crates/eventbus-core/src/consumer/: mod.rs
crates/eventbus-core/src/contract/: mod.rs
crates/eventbus-core/src/delivery_contract/: mod.rs
crates/eventbus-core/src/eventbus/: mod.rs
crates/eventbus-core/src/message_contract/: mod.rs
crates/eventbus-core/src/outbox/: mod.rs
crates/eventbus-core/src/stream/: ack_flusher.rs  auto_finalize.rs  backend.rs  bus.rs  delivery.rs  mod.rs  observer.rs  subscription.rs
crates/eventbus-core/src/stream/backends/: memory.rs  mod.rs  redis.rs
crates/eventbus-core/tests/: dyn_safety.rs  finalize_typesafe.rs  observer.rs  poison_pill.rs  public_api_parity.rs  stream_bus.rs  subscribe_validation.rs
crates/eventbus-integration/: Cargo.toml  README.md
crates/eventbus-integration/src/: integration.rs  lib.rs
crates/eventbus-memory/: Cargo.toml  README.md
crates/eventbus-memory/src/: lib.rs  memory.rs
crates/eventbus-memory/tests/: auto_on_receive_order.rs  forget_consumer.rs  observer.rs  overflow_strategies.rs  parallel_subscribers.rs  poison_pill.rs  publish_batch_parallelism.rs  retry_no_dlq.rs  stream_bus.rs
crates/eventbus-outbox/: Cargo.toml  README.md
crates/eventbus-outbox/src/: lib.rs
crates/eventbus-outbox/src/consumer/: mod.rs
crates/eventbus-outbox/src/dispatcher/: mod.rs
crates/eventbus-outbox/src/idempotency/: mod.rs
crates/eventbus-outbox/src/outbox/: dead_letter.rs  mod.rs
crates/eventbus-outbox/tests/: public_api_parity.rs
crates/eventbus-redis/: Cargo.toml  README.md
crates/eventbus-redis/src/: codec.rs  lib.rs  redis.rs
crates/eventbus-redis/tests/: codec_neg.rs
crates/eventbus/src/: lib.rs
docs/superpowers/plans/: 2026-05-06-eventbus-0.2.0-plan.md
docs/superpowers/specs/: 2026-05-06-eventbus-0.2.0-design.md
examples/: 01_basic_pubsub.rs  02_manual_ack_and_retry.rs  03_competing_consumers.rs  04_redis_backend.rs
src/: error.rs  lib.rs  serde_bytes.rs
src/contract/: mod.rs
src/delivery_contract/: mod.rs
src/dispatcher/: mod.rs
src/eventbus/: mod.rs
src/idempotency/: mod.rs
src/idempotency/integration/: mod.rs
src/integration/: mod.rs
src/message_contract/: mod.rs
src/outbox/: mod.rs
src/redis_stream/: backend.rs  bus.rs  delivery.rs  mod.rs  redis_backend.rs  subscription.rs
src/stream/: ack_flusher.rs  backend.rs  bus.rs  delivery.rs  mod.rs  observer.rs  subscription.rs
src/stream/backends/: memory.rs  redis.rs
tests/: public_api_parity.rs  redis_stream_bus.rs  stream_bus.rs
