[package]
name = "eventbus-contract"
version = "0.1.0"
edition = "2021"
description = "Event bus contract library — pluggable publisher/subscriber traits with Redis Stream and in-memory backends"
license = "MIT"
repository = "https://github.com/zwishing/eventbus-contract"
homepage = "https://github.com/zwishing/eventbus-contract"
documentation = "https://docs.rs/eventbus-contract"
exclude = [".idea", ".DS_Store", ".omx", "AGENTS.md", "CLAUDE.md"]
readme = "README.md"
keywords = ["eventbus", "event-driven", "messaging", "redis", "streams"]
categories = ["asynchronous", "network-programming"]
rust-version = "1.82"

[features]
default = []
redis-backend = ["dep:redis", "dep:serde_json"]

[dependencies]
base64 = "0.22"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
rand = "0.8"
redis = { version = "1", features = ["tokio-comp", "streams"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"
tokio = { version = "1.42.2", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1.42.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
