[workspace]
resolver = "2"
members = [
    "crates/eventbus-core",
    "crates/eventbus-memory",
    "crates/eventbus-redis",
    "crates/eventbus-outbox",
    "crates/eventbus-integration",
    "crates/eventbus",
]

[workspace.package]
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/zwishing/eventbus-contract"
rust-version = "1.82"

[workspace.dependencies]
base64 = "0.22"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
rand = "0.8"
redis = { version = "1", features = ["tokio-comp", "streams"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.42.2", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
futures-core = "0.3"
pin-project-lite = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
