[package]
name = "eventbus-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Event bus contract — facade crate re-exporting backends and helpers"
keywords = ["eventbus", "event-driven", "messaging", "redis", "streams"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["memory"]
memory = ["dep:eventbus-memory"]
redis = ["dep:eventbus-redis"]
tracing = ["eventbus-core/tracing"]
# `outbox` and `integration` are workspace-only in 0.2.0 — the trait crates
# are not yet published to crates.io because they have no reference impl.
# They will return as features in 0.3.0 alongside a concrete impl crate
# (e.g. `eventbus-postgres-outbox`).

[dependencies]
eventbus-core = { path = "../eventbus-core", version = "0.2.0" }
eventbus-memory = { path = "../eventbus-memory", version = "0.2.0", optional = true }
eventbus-redis = { path = "../eventbus-redis", version = "0.2.0", optional = true }

[dev-dependencies]
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
redis = { workspace = true }

[[example]]
name = "01_basic_pubsub"
required-features = ["memory"]

[[example]]
name = "02_manual_ack_and_retry"
required-features = ["memory"]

[[example]]
name = "03_competing_consumers"
required-features = ["memory"]

[[example]]
name = "04_redis_backend"
required-features = ["redis"]
