[package]
name = "eventbus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Object-safe event bus contract traits and types"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
eventbus-memory = { path = "../eventbus-memory", version = "0.2.0" }
eventbus-redis = { path = "../eventbus-redis", version = "0.2.0" }
eventbus-outbox = { path = "../eventbus-outbox", version = "0.2.0" }
eventbus-integration = { path = "../eventbus-integration", version = "0.2.0" }
redis.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }

[[bench]]
name = "publish"
harness = false
