[package]
name = "eventbus-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "In-process StreamBackend for testing the event bus"

[features]
default = ["test-utils"]
test-utils = []

[dependencies]
eventbus-core = { path = "../eventbus-core", version = "0.2.0" }
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
bytes.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }

[[bench]]
name = "publish"
harness = false
