[package]
name = "eventbus-outbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Outbox + Dispatcher + DeadLetterStore traits"

[dependencies]
eventbus-core = { path = "../eventbus-core", version = "0.2.0" }
bytes.workspace = true
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
