[package]
name = "eventbus-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Redis Streams StreamBackend for the event bus"

[features]
default = []
tls = ["redis/tls-native-tls", "redis/tokio-native-tls-comp"]

[dependencies]
eventbus-core = { path = "../eventbus-core", version = "0.2.0", features = ["redis-backend"] }
redis.workspace = true
serde_json.workspace = true
