[package]
name = "eventbus-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Redis Streams StreamBackend for the event bus"

[features]
default = []
tls = ["redis/tls-native-tls", "redis/tokio-native-tls-comp"]

[dependencies]
eventbus-core = { path = "../eventbus-core", version = "0.2.0" }
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
